# FoolNativeHttp

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/kotlin/tony/com/foolhttp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
foolhttplib/: build.gradle
foolhttplib/src/androidTest/java/com/sanyinchen/lib/: ExampleInstrumentedTest.kt
foolhttplib/src/main/cpp/: CMakeLists.txt  onLoad.cpp
foolhttplib/src/main/cpp/curl/: CMakeLists.txt
foolhttplib/src/main/kotlin/com/github/tony/foolhttp/: FoolHttp.kt
foolhttplib/src/main/kotlin/com/github/tony/foolhttp/core/: Response.kt
foolhttplib/src/main/kotlin/com/github/tony/foolhttp/core/client/: HttpCilent.kt
foolhttplib/src/main/kotlin/com/github/tony/foolhttp/core/requests/: TaskRequest.kt
gradle/wrapper/: gradle-wrapper.properties
